--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,5 +1,7 @@
 #footer {
 	background: #fff;
-	color: #000;
+	color: #3c3c3c;
 	font-size: 0.875rem;
+	padding: 16px;
+	border-top-color: var(--border--default);
 }
