--- a/src/scss/_top-menu.scss
+++ b/src/scss/_top-menu.scss
@@ -1,9 +1,10 @@
 #top-menu {
 	display: grid;
 	grid-template-columns: 1fr auto;
-	padding: 8px 16px;
+	padding: 6px 25px;
 	font-size: 1rem;
 	align-items: center;
+	// background-color: var(--blue--transparent);
 	& > * {
 		float: none;
 	}
@@ -20,6 +21,7 @@
 	}
 	a {
 		font-weight: 300;
+		// color: var(--blue);
 	}
 	#loggedas {
 		grid-area: 1 / 2 / 2 / 3;
