--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,21 +1,35 @@
 @mixin button {
 	height: auto;
-	padding: 12px 16px;
+	padding: 6px 16px;
 	border-radius: 4px;
-	color: #000;
-	background: var(--grey);
+	color: var(--blue);
+	border: 1px solid var(--blue);
+	background: #fff; // var(--grey);
 	text-transform: uppercase;
+	font-weight: 500;
 	font-size: 0.875rem;
+	line-height: 1.75;
+	letter-spacing: 0.02857em;
+	text-transform: uppercase;
 	text-decoration: none;
 	display: inline-flex;
 	align-items: center;
-	gap: 5px;
+	gap: 2px;
+	transition: all 0.2s;
 	// box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.14);
+	&:hover {
+		background: var(--blue--transparent);
+		color: var(--blue);
+		text-decoration: none;
+		svg.icon-svg {
+			stroke: var(--blue);
+		}
+	}
 }
 
 @mixin icon-green {
-	background: green;
-	border-color: green;
+	background: var(--green);
+	border-color: var(--green);
 	color: #fff;
 	svg {
 		stroke: #fff;
@@ -23,39 +37,162 @@
 	&:hover {
 		color: #fff;
 		text-decoration: none;
+		background-color: var(--green-dark);
 		svg {
 			stroke: #fff;
 		}
 	}
 }
 
+@mixin input-wrapper {
+	font-family: "Roboto", sans-serif;
+	height: 32px;
+	padding: 6px 6px 6px 6px;
+	border-radius: 4px;
+	background: #fff;
+	font-weight: 400;
+	font-size: 0.875rem;
+	line-height: 1.25;
+	letter-spacing: 0.02857em;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	appearance: auto;
+}
+
+@mixin select-wrapper {
+	font-family: "Roboto", sans-serif;
+	height: auto;
+	padding: 6px 6px 6px 6px;
+	border-radius: 4px;
+	background: #fff;
+	font-weight: 400;
+	font-size: 0.875rem;
+	line-height: 1.75;
+	letter-spacing: 0.02857em;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	appearance: auto;
+}
+
 .icon {
+	// font-size: 1rem;
+	@include button;
+	// padding: 8px 16px 8px 14px;
+	// background: #f0f0f0;
 	&.icon-add {
-		padding: 8px 16px;
+		// padding: 8px 16px;
 		@include icon-green;
 	}
-}
-
-fieldset.collapsible {
-	& > legend {
-		font-size: 0.875rem;
+	&.icon-checked {
+		&:has(.icon-label:empty) {
+			padding: 2px;
+		}
+	}
+	&.icon-label {
+		margin-left: 0;
+	}
+	.icon-label {
+		&:empty {
+			display: none;
+		}
 	}
 }
 
-table {
-	&.issues {
-		tr.issue {
-			&.priority-3 {
-				background: rgba(251,105,98, 0.1);
+fieldset {
+	legend {
+		.icon {
+			&.icon-checked {
+				margin-right: 4px;
 			}
 		}
-		
 	}
-	&.list {
-		font-size: 0.875rem;
-		td {
-			padding-top: 4px;
-			padding-bottom: 4px;
+	&.collapsible {
+		& > legend {
+			font-size: 0.875rem;
+			&.icon {
+				background-color: transparent;
+				padding: 0 2px;
+				border: 0 none;
+			}
+		}
+	}
+}
+
+.nodata, .warning {
+	padding-top: 16px;
+	padding-bottom: 16px;
+	border-radius: 4px;
+}
+
+@mixin wiki {
+	width: auto;
+	border-radius: 4px;
+	& > * {
+		&:first-child {
+			margin-top: 0;
+		}
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+	p {
+		padding: 0 !important;
+		margin: 0.8em 0;
+	}
+	pre {
+		margin-left: 0;
+		margin-right: 0;
+	}
+	ul, ol {
+		padding-left: 20px;
+	}
+}
+
+@mixin pagination {
+	.pages {
+		display: flex;
+		li {
+			margin: 0;
+			border-radius: 0 !important;
+			margin: 0  !important;
+			border: 0 none !important;
+			&:first-child,
+			&:last-child {
+				border-radius: 0;
+			}
+			&:not(:first-child):not(:last-child) {
+				a, span {
+					padding: 6px 12px;
+				}
+			}
+			a, span {
+				@include button;
+				outline: 0 none;
+				border-radius: 0;
+				border-right: 0 none;
+			}
+			&:first-child {
+				a, span {
+					border-radius: 4px 0 0 4px;
+				}
+			}
+			&:last-child {
+				a, span {
+					border-radius: 0 4px 4px 0;
+					border-right: 1px solid;
+				}
+			}
+			&.current {
+				a, span {
+					background: var(--blue--transparent);
+				}
+			}
+			&:not(.current) {
+				span {
+					color: #1976d299;
+				}
+			}
+		}
+		& + span {
+			display: none;
 		}
 	}
 }
