--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -82,8 +82,17 @@ table {
 	}
 	&.issues {
 		tr.issue {
+			// &.priority-1 {
+			// 	background: var(--blue-100);
+			// }
 			&.priority-3 {
-				background: rgba(251,105,98, 0.1);
+				background: var(--red-100); // rgba(251,105,98, 0.1);
+			}
+			&.priority-4 {
+				background: var(--red-200); // rgba(251,105,98, 0.1);
+			}
+			&.priority-5 {
+				background: var(--red-300); // rgba(251,105,98, 0.1);
 			}
 		}
 		
