--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,21 @@
 	--blue-dark: #01579b;
 	--blue--transparent: hsla(210, 100%, 96%, 0.8);
 	--blue--hover: rgba(25, 118, 210, 0.04);
+
+	--blue-100: #deedfd;
+	--blue-200: #b1d0f8;
+	--blue-300: #86b1f1;
+	--blue-400: #5d8fe8;
+	--blue-500: #376bdd;
+	--blue-600: #2a59c1;
+	--blue-700: #1e48a3;
+
+	--red-100: #fde2dd;
+	--red-200: #f7b7ae;
+	--red-300: #ef8b81;
+	--red-400: #e55d57;
+	--red-500: #d92f2f;
+	--red-600: #be2923;
 	
 	--border--default: hsl(215, 15%, 92%);
 
