--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,3 +1,13 @@
+@mixin icon {
+	color: var(--blue);
+	text-transform: uppercase;
+	font-size: 0.875rem;
+	// line-height: 1.75;
+	letter-spacing: 0.02857em;
+	display: inline-flex;
+	align-items: center;
+	gap: 2px;
+}
 @mixin button {
 	height: auto;
 	padding: 6px 16px;
@@ -72,13 +82,21 @@
 	appearance: auto;
 }
 
+// a[href].icon {
+// 	background: red !important;
+// }
+
 .icon {
-	// font-size: 1rem;
-	@include button;
-	// padding: 8px 16px 8px 14px;
-	// background: #f0f0f0;
+	@include icon;
+	&:is(a) {
+		@include button;
+	}
+	&:is(span) {
+		& + span.icon {
+			margin-left: 8px;
+		}
+	}
 	&.icon-add {
-		// padding: 8px 16px;
 		@include icon-green;
 	}
 	&.icon-checked {
@@ -92,6 +110,12 @@
 	.icon-label {
 		&:empty {
 			display: none;
+		}
+	}
+	.drdn .drdn-items > & {
+		border: 0 none;
+		&:hover {
+			border: 0 none;
 		}
 	}
 }
