--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -5,4 +5,11 @@
 		margin: 0;
 		padding: 12px 16px;
 	}
+	#sidebar-wrapper {
+		select, 
+		input:not([type="submit"]):not([type="checkbox"]) {
+			display: block;
+			width: 100%;
+		}
+	}
 }
