--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -68,6 +68,7 @@ fieldset#filters {
 div.issue {
 	padding: 16px;
 	background-color: #f7fff8;
+	margin-top: 16px;
 	&::before {
 		content: "";
 		display: block;
@@ -75,6 +76,18 @@ div.issue {
 	}
 	.attributes {
 		.attribute {
+			// background: red;
+			padding-left: 0;
+			display: grid;
+			grid-template-columns: 120px 1fr;
+			.label {
+				width: auto;
+				margin-left: 0;
+				float: none;
+				overflow: visible;
+			}
+			&.status {
+			}
 			&.progress {
 				p.percent {
 					line-height: 20px;
