--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -1,15 +1,21 @@
 #sidebar {
 	padding-left: 20px;
 	padding-right: 20px;
-	a.selected {
-		margin: 0;
-		padding: 12px 16px;
-	}
 	#sidebar-wrapper {
 		select, 
 		input:not([type="submit"]):not([type="checkbox"]) {
 			display: block;
 			width: 100%;
+		}
+	}
+	ul {
+		font-size: 0.875rem;
+	}
+	.icon {
+		&.selected {
+			margin: 0;
+			padding-left: 12px;
+			padding-right: 12px;
 		}
 	}
 }
