--- a/src/scss/_top-menu.scss
+++ b/src/scss/_top-menu.scss
@@ -4,6 +4,7 @@
 	padding: 6px 25px;
 	font-size: 1rem;
 	align-items: center;
+	background-color: #181b34;
 	// background-color: var(--blue--transparent);
 	& > * {
 		float: none;
