--- a/src/scss/_admin.scss
+++ b/src/scss/_admin.scss
@@ -22,3 +22,22 @@
 		}
 	}
 }
+
+#login-form {
+	// background: var(--content--background);
+	// border: 0 none;
+	// box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
+	margin: 2em auto;
+	padding: 18px;
+	width: 320px;
+	border: 1px solid #d0d7de;
+	background: #f9fafb;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+	input {
+		height: auto;
+		&[type=text], &[type=password] {
+			margin-bottom: 18px;
+		}
+	}
+	
+}
